# extended-a2dp-bluedroid

./: README.md
250917_migrated_files/Bluedroid-a2dp-incs/: a2dp_vendor_lhdcv5.h  a2dp_vendor_lhdcv5_decoder.h
250917_migrated_files/Bluedroid-a2dp-srcs/: a2dp_vendor_lhdcv5.c  a2dp_vendor_lhdcv5_decoder.c
2509191841_changed_files/: a2dp_vendor_lhdcv5.c  a2dp_vendor_lhdcv5.h  a2dp_vendor_lhdcv5_decoder.c  bt_av.h
250919_changed_files/a2dp_incs/: a2dp_vendor_ldac.h  a2dp_vendor_ldac_decoder.h  a2dp_vendor_lhdcv5.h
250919_changed_files/a2dp_srcs/: a2dp_vendor.c  a2dp_vendor_ldac.c  a2dp_vendor_ldac_decoder.c  a2dp_vendor_ldacbt_decoder.c  a2dp_vendor_lhdcv5.c  a2dp_vendor_lhdcv5_decoder.c
250919_changed_files/bt-CMakeLists/: CMakeLists.txt
250919_changed_files/external-lib/libldacdec/: CMakeLists.txt
250919_changed_files/external-lib/libldacdec/src/: bit_reader.c
HP-H300BT/: Makefile
HP-H300BT/apps/: Makefile
HP-H300BT/apps/audio_test/: Makefile  audio_test_cmd.c  audio_test_defs.h  audio_test_hifi.c  audio_test_speech_algo_dsp.c  audio_test_stream.c
HP-H300BT/config/: Makefile  common.mk
HP-H300BT/services/: Makefile
android_packages_modules_Bluetooth/apex/: Android.bp
android_packages_modules_Bluetooth/flags/: security.aconfig
android_packages_modules_Bluetooth/sysprop/: a2dp.sysprop
btstack_app_sf32/: eq_prase.py
btstack_app_sf32/project/: SConstruct  proj.conf
btstack_app_sf32/src/: BiQuadFilter  BiQuadFilter.h  SConscript  a2dp_decoder.c  a2dp_decoder.h  a2dp_sink_demo.c  es9038q2m.c  es9038q2m.h  main  main.c  pcm_bridge.h
(+424 files in other folders)
